general functions created

--- a/timer-proto-functions.html
+++ b/timer-proto-functions.html
@@ -14,12 +14,13 @@
     <h1 id="app">Count Down from 10</h1>
     <div id="alert alert-success" role="alert">
         <script>
+            // Variable count, ihr Wert ist noch undefined.
+            // max count
+            // Wird zum Stoppen von setInterval() verwendet.
+            
             function startCountdown() {
             }
-                //Variable count, ihr 
                 //
-                //
-
                 //
                 //
 
