--- a/countdown.html
+++ b/countdown.html
@@ -80,10 +80,12 @@
   #clockdiv {
     flex-direction: column;
     align-items: center;
+    
   }
 
 .smalltext{
-     text-align: center;   
+     text-align: center;  
+     display: none;  
     }
 }
     </style>
